--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			</div>
 		</main>
 		
-		<footer class="attribution">
+		<footer class="attribution" role="doc-footnote">
 			Challenge by
 			<a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by
 			<a href="https://www.twitter.com/oyeinbomo" target="_blank">Opuene Oyeinbomo</a>.
